--- a/index.html
+++ b/index.html
@@ -17,9 +17,19 @@
 </head>
 
 <body>
-  
-
-
-
+<header>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-lg-12 col-sm-12">
+        <img src="images/exp-hero.jpg" class="img-fluid" alt="EXP 10"/>
+        <p>DRIVE WITH INFINITE POTENTIAL</p>
+        <p>CLASS, SPEED, AND LUXURY</p>
+            <div>
+            <li>DRIVE WITH POTENTIAL TODAY</li>
+            </div>
+    </div>
+  </div>
+</div>
+</header>
 </body>
 </html>
