--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
 
   <script src="js/jquery-3.2.1.min.js"></script>
   <script src="js/bootstrap.js"></script>
+  <script type="text/javascript"></script>
 </head>
 
 <body>
-<header>
-<div class="container.fluid">
+<div class="container">
+<div class="hero">
   <div class="row">
     <div class="col-lg-12">
          <h1>DRIVE WITH INFINITE POTENTIAL</h1>
@@ -30,11 +31,15 @@
             <div>
             <li>DRIVE WITH POTENTIAL TODAY</li>
             </div>
-        <img src="images/exp-hero.jpg" class="img-fluid" alt="EXP 10"/>
+        
     </div>
   </div>
 </div>
-</header>
+    </div>
+
+
+
+
 
     
 <section class="lights">
@@ -44,7 +49,7 @@
       <img src="images/logo-white.png">
         <h2>STUNNINGLY BRIGHT</h2>
         <p>Bentley’s iconic headlight completely re-designed. Handcrafted and made only for the EXP 10.</p>
-      <img src="images/exp-headlight.jpg" class="img-fluid">
+      <img src="images/exp-headlight.jpg">
     </div>
   </div>
 </div>
