--- a/index.html
+++ b/index.html
@@ -14,7 +14,14 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/animate.css">
   <link rel="stylesheet" href="css/style.css">
+  <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
+  <script type="text/javascript" src="js/nicescroll.js"></script> 
+  <script type="text/javascript">
+    $(document).ready(function() {  
+    $("html").niceScroll();
+});
 
+  </script>
 
 
 </head>
@@ -140,22 +147,6 @@
   </div>
 </footer>  
 
-  <script src="js/jquery-3.2.1.min.js"></script>
-   <script src="js/bootstrap.js"></script>
-  <script src="js/nicescroll.js"></script> 
-  <script type="text/javascript">
-  $(document).ready(function() { 
-
-    $("body").niceScroll({
-       scrollspeed: 80,
-       smoothscroll: true, // scroll with ease movement
-    });
-
-
-  }
-
-);
-  </script>
 
 
 
