--- a/index.html
+++ b/index.html
@@ -247,6 +247,7 @@
 
     <div
             class="parallax-image skrollable-between"
+         style="background-image:url(assets/images/exp-tail.jpg);"
             data-anchor-target="#section-4"
             data-bottom-top="transform: translateY(-80%);"
             data-top-bottom="transform: translateY(80%);"
@@ -254,6 +255,25 @@
 
     </div>
 </div>
+    
+
+<div
+        class="parallax-image-wrapper skrollable-between"
+        data-anchor-target="#section-5"
+        data-bottom-top="transform:translateY(200%)"
+        data-top-bottom="transform:translateY(0)">
+
+    <div
+            class="parallax-image skrollable-between"
+            style="background-image:url(assets/images/exp-steering.jpg);"
+            data-anchor-target="#section-5"
+            data-bottom-top="transform: translateY(-80%);"
+            data-top-bottom="transform: translateY(80%);"
+            >
+
+    </div>
+</div>
+
     
 <div id="skrollr-body">
         <div id="page-intro" class="gap" style="background-image:url(assets/images/exp-hero.jpg);" >
@@ -322,22 +342,6 @@
 </div>
 
 
-
-<div
-        class="parallax-image-wrapper skrollable-between"
-        data-anchor-target="#section-5"
-        data-bottom-top="transform:translateY(200%)"
-        data-top-bottom="transform:translateY(0)">
-
-    <div
-            class="parallax-image skrollable-between"
-            data-anchor-target="#section-5"
-            data-bottom-top="transform: translateY(-80%);"
-            data-top-bottom="transform: translateY(80%);"
-            >
-
-    </div>
-</div>
 
 
 <div id="section-5" class="gap" style="background-image:url(assets/images/exp-steering.jpg);">
