--- a/index.html
+++ b/index.html
@@ -196,8 +196,8 @@
             class="parallax-image skrollable-after"
             style="background-image:url(assets/images/exp-hero.jpg)"
             data-anchor-target="#page-intro"
-            data-bottom-top="transform: translateY(-80%);"
-            data-top-bottom="transform: translateY(80%);"
+            data-bottom-top="transform: translateY(-100%);"
+            data-top-bottom="transform: translateY(100%);"
             >
 
     </div>
@@ -213,8 +213,8 @@
             class="parallax-image skrollable-between"
          style="background-image:url(assets/images/exp-headlight.jpg);"
             data-anchor-target="#section-2"
-            data-bottom-top="transform: translateY(-80%);"
-            data-top-bottom="transform: translateY(80%);"
+            data-bottom-top="transform: translateY(-100%);"
+            data-top-bottom="transform: translateY(100%);"
             >
 
     </div>
@@ -231,8 +231,8 @@
             class="parallax-image skrollable-between"
             style="background-image:url(assets/images/exp-interior.jpg);"
             data-anchor-target="#section-3"
-            data-bottom-top="transform: translateY(-80%);"
-            data-top-bottom="transform: translateY(80%);"
+            data-bottom-top="transform: translateY(-100%);"
+            data-top-bottom="transform: translateY(100%);"
             >
 
     </div>
@@ -249,8 +249,8 @@
             class="parallax-image skrollable-between"
          style="background-image:url(assets/images/exp-tail.jpg);"
             data-anchor-target="#section-4"
-            data-bottom-top="transform: translateY(-80%);"
-            data-top-bottom="transform: translateY(80%);"
+            data-bottom-top="transform: translateY(-100%);"
+            data-top-bottom="transform: translateY(100%);"
             >
 
     </div>
@@ -267,8 +267,8 @@
             class="parallax-image skrollable-between"
             style="background-image:url(assets/images/exp-steering.jpg);"
             data-anchor-target="#section-5"
-            data-bottom-top="transform: translateY(-80%);"
-            data-top-bottom="transform: translateY(80%);"
+            data-bottom-top="transform: translateY(-100%);"
+            data-top-bottom="transform: translateY(100%);"
             >
 
     </div>
@@ -359,23 +359,43 @@
     </div>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+<section class="ending">
+  <div class="bottom-title">
+    <h2>The Number 10:</h2>
+    <p>Independence filled only with infinite potential.</p>
+    </div>
+    <div class="row">
+    <div class="col-lg-6">
+        <h1>THIS IS POTENTIAL</h1>
+        <p>This car will become a classic, 50 years from today. Bentley is known for it’s elegant style and beautiful cars. Bentley have decided to creat The EXP 10. A car filled with only growing  potential. Mark today, Bentley’s two seater - ever.</p>
+    </div>
+      <div class="col-lg-6" align="center">
+    <img src="images/logo-large.png" class="img-fluid">
+    </div>
+    </div>
+    <div class="col-lg-12" align="center">
+        <div class="button">
+            <li>FIND DEALERS NEAR YOU</li>
+        </div>
+            <div class="icons">
+                <img src="images/facebook-icon.png" class="img-fluid">
+                <img src="images/insta-icon.png" class="img-fluid">
+                <img src="images/twitter-icon.png" class="img-fluid">
+            </div>
+      </div>
+</section>
+    
+    
+<footer>
+  <div class="row">
+      <div class="col-lg-12" align="center">
+        <li>CONTACT US | </li>
+        <li>ABOUT BENTLEY | </li>
+        <li>PRIVACY POLICY | </li>
+        <li>TERMS AND CONDITIONS</li>
+      </div>
+  </div>
+</footer>  
 
 
 
