--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
   </div>
 </div>
 </div>
-    </div>
+    
 
 
 <section class="ending">
@@ -396,15 +396,15 @@
       </div>
   </div>
 </footer>  
-
-
+    </div>
 
 
 
 
   <script type="text/javascript" src="js/skrollr.min.js"></script>
 <script type= "text/javascript">
-  var s = skrollr.init();
+    var s = skrollr.init({forceHeight: false});
+
   </script>
 
 
