--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 </head>
 <body>
-
+    <div style=transform: translate3d(0,0,0);></div>
 
 
 <div
@@ -241,8 +241,6 @@
     var s = skrollr.init({forceHeight: false});
 
   </script>
-
-
 
 
 
