--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 <div id="fullpage" class="fullpage-wrapper" style="height: 100%; position: relative; touch-action: none; transform: translate3d(0px, 0px, 0px); transition: all 600ms ease;">
 
 
-<div class="section  fp-section" id="section1" >
-<div class="container.fluid">
+<div class="section  fp-section animated fadeInDown" id="section1">
+<div class="container.fluid" >
   <div class="row">
       <div class="col-lg-12">
          <h1>DRIVE WITH INFINITE POTENTIAL</h1>
@@ -54,7 +54,7 @@
 </div>
 
   
-    <div class="section fp-section" id="section2" ">
+    <div class="section fp-section" id="section2">
 <div class="container.fluid">
   <div class="row">
     <div class="col-lg-12">
@@ -118,6 +118,7 @@
     <h2>The Number 10:</h2>
     <p>Independence filled only with infinite potential.</p>
     </div>
+    <hr>
 
     <div class="row">
     <div class="col-lg-6">
@@ -138,12 +139,12 @@
                 <img src="images/twitter-icon.png" class="img-fluid">
             </div>
       </div>
-      <div class="row">
-        <div class="col-lg-12 footer">
-        <li >CONTACT US</li>
-        <li>ABOUT BENTLEY</li>
-        <li >PRIVACY POLICY</li>
-        <li >TERMS AND CONDITIONS</li>
+      <div class="row footer" align="center">
+        <div class="col-lg-12" align="center">
+        <li >CONTACT US    </li>
+        <li>ABOUT BENTLEY   </li>
+        <li >PRIVACY POLICY   </li>
+        <li >TERMS AND CONDITIONS   </li>
         </div>
       </div>
     </div>
