--- a/index.html
+++ b/index.html
@@ -35,6 +35,13 @@
 </head>
 <body class="fp-viewing-0" style="overflow: hidden; height: 100%;">
 
+<div class="topnav" id="myTopnav">
+  <a href="#home">HOME</a>
+  <a href="#news">DEALERS</a>
+  <a href="#contact">DRIVE ONE TODAY</a>
+  <a href="#about">TAILOR YOUR OWN</a>
+</div>
+
 
 <div id="fullpage" class="fullpage-wrapper" style="height: 100%; position: relative; touch-action: none; transform: translate3d(0px, 0px, 0px); transition: all 600ms ease;">
 
