--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <div id="fullpage" class="fullpage-wrapper" style="height: 100%; position: relative; touch-action: none; transform: translate3d(0px, 0px, 0px); transition: all 600ms ease;">
 
 
-<div class="section  fp-section animated fadeInDown" id="section1">
+<div class="section  fp-section" id="section1">
 <div class="container.fluid" >
   <div class="row">
       <div class="col-lg-12">
