--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
   $(document).ready(function() {
   $('#fullpage').fullpage({
     scrollingSpeed: 900,
+    scrollOverflow: true,
+    css3: true,
   });
 });
 
@@ -34,14 +36,14 @@
 
 </head>
 <body class="fp-viewing-0" style="overflow: hidden; height: 100%;">
-
+<!--
 <div class="topnav" id="myTopnav">
   <a href="#home">HOME</a>
   <a href="#news">DEALERS</a>
   <a href="#contact">DRIVE ONE TODAY</a>
   <a href="#about">TAILOR YOUR OWN</a>
 </div>
-
+-->
 
 <div id="fullpage" class="fullpage-wrapper" style="height: 100%; position: relative; touch-action: none; transform: translate3d(0px, 0px, 0px); transition: all 600ms ease;">
 
