--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <div id="section2">
                     <div class="text-container">
                         <h2>stunningly bright</h2>
-                        <p>Bentley’s iconic headlight completely re-designed. <br> Handcrafted and made only for the EXP 10.</p>
+                        <p>Bentley’s iconic headlight completely re-designed. Handcrafted and made only for the EXP 10.</p>
                     </div>
                 </div> 
             </section>
@@ -58,7 +58,7 @@
                 <div id="section4">
                     <div class="text-container">
                         <h2>Oled Technology</h2>
-                        <p>New rear lamps. Bentley has now infused their <br> highly advanced OLED that are powerfully efficient.</p>
+                        <p>New rear lamps. Bentley has now infused their highly advanced OLED that are powerfully efficient.</p>
                     </div>
                 </div>
             </section>
